applying screw modifier turns object to black #34369

Closed
opened 2013-02-22 19:10:36 +01:00 by Alexander N. · 6 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 sp1 64bit

- Blender version with error, and version that worked ---

blender-2.65a-windows64.zip - OK
... - ???
blender-2.65-r54188-win64.zip - with issue
blender-2.66-windows64.7z - with issue

- Short description of error ---

in some cases, applying the screw modifier will miss-assign face materials of the object in case, when its "smooth shading" is unchecked and "calc order" is checked.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. open blender
  2. add to default scene cube the screw modifier (or make your own shape you want to apply the screw modifier)
  3. check "calc order" option of screw modifier
  4. uncheck "smooth shading" option of screw modifier
  5. click "apply" of screw modifier
  6. now, the object turned black

the fastest way to get the object material back to its normal one is, to go in edit mode, select all faces and assign the material - even if there is no material selected or listed. when you leave the edit mode, everything looks normal as usual.

(here another longer way, for people how complain about why screw a cube)

  • , - , [DEL], [ENTER]
    [SHIFT] + - , - , [P]
    [TAB]
    [ALT] + - , [C]
  • , - , - , [ENTER]
    [TAB]
    Add Modifier, Screw
    check "Calc Order"
    uncheck "Smooth Shading"
    click "Apply"%%%
%%%--- Operating System, Graphics card --- Windows 7 sp1 64bit - Blender version with error, and version that worked --- blender-2.65a-windows64.zip - OK ... - ??? blender-2.65-r54188-win64.zip - with issue blender-2.66-windows64.7z - with issue - Short description of error --- in some cases, applying the screw modifier will miss-assign face materials of the object in case, when its "smooth shading" is unchecked and "calc order" is checked. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. open blender 2. add to default scene cube the screw modifier (or make your own shape you want to apply the screw modifier) 3. check "calc order" option of screw modifier 4. uncheck "smooth shading" option of screw modifier 5. click "apply" of screw modifier 6. now, the object turned black the fastest way to get the object material back to its normal one is, to go in edit mode, select all faces and assign the material - even if there is no material selected or listed. when you leave the edit mode, everything looks normal as usual. (here another longer way, for people how complain about why screw a cube) - [x], - [x], [DEL], [ENTER] [SHIFT] + - [x], - [x], [P] [TAB] [ALT] + - [x], [C] - [x], - [x], - [x], [ENTER] [TAB] Add Modifier, Screw check "Calc Order" uncheck "Smooth Shading" click "Apply"%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Could reproduce the redraw error with r54763 on Ubuntu 12.04 64bit.%%%

%%%Could reproduce the redraw error with r54763 on Ubuntu 12.04 64bit.%%%
Member

%%%Even when you think it's easy to redo, adding a .blend file is really important. Makes testing much easier. There's 10-15 reports added every day you know!%%%

%%%Even when you think it's easy to redo, adding a .blend file is really important. Makes testing much easier. There's 10-15 reports added every day you know!%%%
Author
Member

%%%now, i attached a blend file%%%

%%%now, i attached a blend file%%%

%%%fixed r55004.%%%

%%%fixed r55004.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34369
No description provided.