fix [#34369] applying screw modifier turns object to black